# ChangeLog for net-im/kadu-globalhotkeys
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 Jan 2009; Michał Ziąbkowski <mziab@o2.pl>
  kadu-globalhotkeys-0.6.0_p1.ebuild, kadu-globalhotkeys-0.6.0_p3.ebuild,
  kadu-globalhotkeys-0.6.0_p7.ebuild, -kadu-globalhotkeys-0.6.5_p6.ebuild,
  kadu-globalhotkeys-0.6.5_p7.ebuild, +metadata.xml:
  Some repoman fixes.

  18 Dec 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-globalhotkeys-0.6.0_p7.ebuild:
  Bumped.

  08 Dec 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-globalhotkeys-0.6.5_p7.ebuild:
  Bumped.

  03 Jul 2008; Michał Ziąbkowski <mziab@o2.pl>
  kadu-globalhotkeys-0.6.0_p3.ebuild:
  Stabled.

  18 Jun 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-globalhotkeys-0.6.0_p3.ebuild:
  Bumped.

  07 Jun 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-globalhotkeys-0.6.0_p1.ebuild:
  Initial ebuild. Will bump to _p2 once Kadu 0.6.0.2 is released.
