@@ -5,5 +5,5 @@ DIST kadu-0.6.5.1.tar.bz2 1341099 RMD160 3c1a8a770d0701e019b5ed68658d20ea6f789e4
 EBUILD kadu-globalhotkeys-0.6.0_p7.ebuild 349 RMD160 3e450818483cf8dee857751a6797683186dd6454 SHA1 4eafbbb876b50fae7ccf055cdf307dfeda8b0264 SHA256 b5266af4e4c195068b5dbe70809fa0a438a2786d72b21ce98c93d5f400db0f09
 EBUILD kadu-globalhotkeys-0.6.5_p7.ebuild 345 RMD160 d465d38cdac9da65117d697e4d21137dacd8df4f SHA1 e8f2ad30481827e2891b103d6c05142e4f0e6c14 SHA256 ef88d3ea21049bf951471d2b86d4aef3bfbfc96395dba35c3436022db698d92a
 EBUILD kadu-globalhotkeys-0.6.5_p8.ebuild 345 RMD160 d465d38cdac9da65117d697e4d21137dacd8df4f SHA1 e8f2ad30481827e2891b103d6c05142e4f0e6c14 SHA256 ef88d3ea21049bf951471d2b86d4aef3bfbfc96395dba35c3436022db698d92a
-MISC ChangeLog 951 RMD160 b588d3f5dd020060bffd4072641146a9026b7a1d SHA1 52183332dbaadb4ecb3665b77bfbde1b8371b47b SHA256 61a1a3f60356c0d5265a8e3caf451f13ff83d903a7802e5765c9f8c47b7ef997
+MISC ChangeLog 1050 RMD160 3a2b33515f8b9f0fff53cb8db8eaf473274f2497 SHA1 9175f4e283117d42e921bcf19f5eda51eaeef3c5 SHA256 d45dcba2a566862119fb9c17cf948987b19444e9d03ce2e998a08efbceee17f7
 MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
