@@ -3,6 +3,10 @@
 # $Header: $
 
   25 Jan 2009; Michał Ziąbkowski <mziab@o2.pl>
+  +kadu-globalhotkeys-0.6.5_p8.ebuild:
+  Bumped.
+
+  25 Jan 2009; Michał Ziąbkowski <mziab@o2.pl>
   kadu-globalhotkeys-0.6.0_p1.ebuild, kadu-globalhotkeys-0.6.0_p3.ebuild,
   kadu-globalhotkeys-0.6.0_p7.ebuild, -kadu-globalhotkeys-0.6.5_p6.ebuild,
   kadu-globalhotkeys-0.6.5_p7.ebuild, +metadata.xml:
